# discord-client-rs

./: .gitignore  Cargo.toml  README.md  progress.py
discord_client_gateway/: Cargo.toml  README.md
discord_client_gateway/examples/: activity.rs  clan_finder.rs  event_printer.rs  fast_user_scraper.rs  guild_requesting.rs
discord_client_gateway/src/: gateway.rs  lib.rs  utils.rs
discord_client_gateway/src/events/: deserializer.rs  mod.rs  structs.rs
discord_client_gateway/src/events/structs/: call.rs  gateway.rs  guild.rs  message.rs  misc.rs  mod.rs  notifications.rs  presence.rs  ready.rs  requested.rs  user.rs
discord_client_gateway/src/events/structs/channel/: mod.rs  pin.rs  recipient.rs  stage.rs  summary.rs  thread.rs  typing.rs  voice.rs  webhook.rs
discord_client_gateway/src/events/structs/guild/: ack.rs  automod.rs  ban.rs  emoji.rs  integration.rs  join_request.rs  mod.rs  role.rs  schedule_event.rs  soundboard.rs  sticker.rs  unread.rs
discord_client_gateway/src/events/structs/message/: mention.rs  mod.rs  poll.rs  reaction.rs
discord_client_gateway/src/events/structs/user/: direct_message.rs  mod.rs  note.rs  relationship.rs
discord_client_macros/: Cargo.toml
discord_client_macros/src/: lib.rs
discord_client_rest/: Cargo.toml  README.md
discord_client_rest/examples/: channel.rs  connect.rs  dm.rs  group.rs  guild.rs  message.rs  reverse.rs  send_message.rs
discord_client_rest/src/: build_number.rs  captcha.rs  clearance.rs  lib.rs  mfa.rs  rate_limit.rs  rest.rs  super_prop.rs
discord_client_rest/src/api/: auth.rs  channel.rs  dm.rs  group.rs  guild.rs  invite.rs  message.rs  mod.rs  self_user.rs
discord_client_rest/src/clearance/: compressor.rs  mod.rs  payload.json
discord_client_rest/src/image/: base64.rs  mod.rs
discord_client_rest/src/structs/: context.rs  mod.rs  referer.rs
discord_client_strucs/: Cargo.toml
discord_client_strucs/src/: deserializer.rs  lib.rs  structs.rs
discord_client_structs/: Cargo.toml
discord_client_structs/src/: deserializer.rs  lib.rs  parser.rs  serializer.rs
discord_client_structs/src/structs/: gateway.rs  guild.rs  misc.rs  mod.rs  permission.rs
discord_client_structs/src/structs/application/: mod.rs  team.rs
discord_client_structs/src/structs/channel/: invite.rs  mod.rs  overrides.rs  status.rs  summary.rs  thread.rs  unread.rs  voice.rs  webhook.rs
discord_client_structs/src/structs/guild/: activity.rs  automod.rs  clan.rs  create.rs  event.rs  experiment.rs  integration.rs  log.rs  mod.rs  role.rs  stage.rs  user.rs
discord_client_structs/src/structs/guild/log/: mod.rs  query.rs
discord_client_structs/src/structs/message/: attachment.rs  call.rs  embed.rs  interaction.rs  mod.rs  poll.rs  purchase.rs  query.rs  reaction.rs  select.rs  soundboard.rs  sticker.rs
discord_client_structs/src/structs/user/: activity.rs  connection.rs  experiment.rs  mod.rs  presence.rs  relationship.rs  session.rs  status.rs
examples/feur_bot/: Cargo.toml
examples/feur_bot/src/: main.rs
examples/invite_join/: Cargo.toml
examples/invite_join/src/: main.rs
