[workspace]

members = [
    "discord_client_gateway",
    "discord_client_rest",
    "discord_client_structs"
]

resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
rquest = "2.0.6"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["UwUDev"]
description = "Undetected discord client backend reimplementation"
