[workspace]

members = [
    "discord_client_gateway",
    "discord_client_macros",
    "discord_client_rest",
    "discord_client_structs",

    # Examples
    "examples/feur_bot",
    "examples/invite_join",
]

resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
rquest = "5.0.0"
rquest-util = "2"
serde_json = "1.0.138"
serde_path_to_error = "0.1.17"
chrono = "0.4.39"
tokio = "1.43.0"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["UwUDev"]
description = "Undetected discord client backend reimplementation"
