[package]
name = "discord_client_gateway"
version = "0.1.0"
edition = "2024"
authors = ["UwUDev"]
description = "An undetected and legit discord client gateway for users and NOT for bots"
repository = "https://github.com/UwUDev/discord_client_gateway"

[lib]
name = "discord_client_gateway"
path = "src/lib.rs"

[[example]]
name = "event_printer"
path = "examples/event_printer.rs"

[dependencies]
discord_client_strucs = {path = "../discord_client_strucs"}
futures-util = { version = "0.3.0", default-features = false }
rquest = { version = "2.0.3", features = ["websocket"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread"] }
zlib_stream = "0.1.0"
serde = {workspace = true}
