[package]
name = "discord_client_gateway"
version = "0.1.0"
edition = "2024"
authors = ["UwUDev"]
description = "Undetected discord client gateway reimplementation"
repository = "https://github.com/UwUDev/discord-client-rs"

[lib]
name = "discord_client_gateway"
path = "src/lib.rs"

[[example]]
name = "event_printer"
path = "examples/event_printer.rs"

[dependencies]
discord_client_structs = {path = "../discord_client_structs"}
futures-util = { version = "0.3.0", default-features = false }
rquest = { version = "2.0.6", features = ["websocket"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt", "macros", "rt-multi-thread"] }
zlib_stream = "0.1.0"
serde = {workspace = true}
chrono = "0.4.39"
