[package]
name = "discord_client_gateway"
version = "0.1.0"
edition = "2024"
authors = ["UwUDev"]
description = "Undetected discord client gateway reimplementation"
repository = "https://github.com/UwUDev/discord-client-rs"
readme = "README.md"

[lib]
name = "discord_client_gateway"
path = "src/lib.rs"

[features]
debug_events = []

[[example]]
name = "event_printer"
path = "examples/event_printer.rs"
required-features = ["debug_events"]

[[example]]
name = "guild_requesting"
path = "examples/guild_requesting.rs"
required-features = ["debug_events"]

[[example]]
name = "fast_user_scraper"
path = "examples/fast_user_scraper.rs"
required-features = ["debug_events"]

[dependencies]
discord_client_structs = {path = "../discord_client_structs"}
discord_client_macros = {path = "../discord_client_macros"}
futures-util = { version = "0.3.0", default-features = false }
rquest = { workspace = true, features = ["websocket"] }
rquest-util = { workspace = true }
serde_json = {workspace = true}
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
zlib_stream = "0.1.0"
serde = {workspace = true}
chrono = {workspace = true}
