[package]
name = "discord_client_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
darling = "0.20"
proc-macro2 = "1.0.93"
chrono = "0.4.39"
