[package]
name = "discord_client_rest"
version = "0.1.0"
edition = "2024"
authors = ["UwUDev"]
description = "Undetected discord client rest API reimplementation"
repository = "https://github.com/UwUDev/discord-client-rs"
# readme = "README.md"

[[example]]
name = "message"
path = "examples/message.rs"

[dependencies]
discord_client_structs = {path = "../discord_client_structs"}
rquest = { workspace = true, features = ["gzip", "deflate", "zstd", "brotli", "json", "cookies"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
regex = "1.11.1"
iana-time-zone = "0.1.61"
current_locale = "0.1.1"
serde_json = {workspace = true}
base64 = "0.22.1"
serde = { workspace = true, features = ["derive"] }
log = "0.4.25"
