[package]
name = "discord_client_structs"
version = "0.1.0"
edition = "2024"
authors = ["UwUDev"]
description = "Discord API/gateway structs with serde support"
repository = "https://github.com/UwUDev/discord-client-rs"

[lib]
name = "discord_client_structs"
path = "src/lib.rs"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
chrono = {workspace = true}
derive_builder = "0.20.2"
