[package]
name = "feur_bot"
version = "0.1.0"
edition = "2024"


[dependencies]
discord_client_gateway = {path = "../../discord_client_gateway"}
discord_client_rest = {path = "../../discord_client_rest"}
discord_client_structs = {path = "../../discord_client_structs"}
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }